[package]
name = "line_plot"
version = "0.1.2"
authors = ["Joseph Mark <sjeohp@gmail.com>"]
license = "MIT"
description = "2d line plot"
repository = "https://github.com/sjeohp/line_plot.git"
keywords = ["2d", "line", "plot"]

[lib]
name = "line_plot"
path = "src/lib.rs"

[dependencies]
glhelper = "*"
sdl2 = "*" #{ version = "*", git = "https://github.com/AngryLawyer/rust-sdl2" }
nalgebra = "*"
gl = "*"
libc = "*"
time = "*"