[package]
name = "line_plot"
version = "0.1.7"
authors = ["Joseph Mark <sjeohp@gmail.com>"]
license = "MIT"
description = "2d line plot"
repository = "https://github.com/sjeohp/line_plot.git"
keywords = ["2d", "line", "plot"]

[lib]
name = "line_plot"
path = "src/lib.rs"

[dependencies]
glhelper = "0.1.8"
sdl2 = "0.29.1"
nalgebra = "0.16.8"
gl = "0.6.1"
